# similar_images

./: LICENSE  README.md  core.py  main.py  pyproject.toml  requirements.dev.txt  requirements.txt  test.py
.github/workflows/: python-publish.yml
components/: __init__.py  banners.py  folder_picker.py  similar_viewer.py
core/: __init__.py  similar_image.py  similarity_finder.py
misc/: percentage_converter.py
similar_images/: __init__.py  __main__.py  disjoint_set.py  similar_image.py  similarity_finder.py
store/: __init__.py  data_store.py
ui/: app.py
ui/components/: __init__.py  banners.py  folder_picker.py  hash_selector.py  hash_threshold_slider.py  loading_modal.py  similar_viewer.py
ui/components/similar_viewer/: __init__.py  comparison_card.py  comparison_viewer.py  score_card_switcher.py  score_image_list.py  score_selector.py  side_bar.py  utils.py
